# ot-bench

./: .gitignore  pyproject.toml  requirements_dev.txt
notebooks/: overview.ipynb
notebooks/regression/: mlo_cn2.ipynb
otbench/benchmark/: experiments.json
otbench/benchmark/models/forecasting/: linear.py  persistence.py
otbench/benchmark/models/regression/: __init__.py
otbench/data/mlo_cn2/: citation.md
otbench/data/usna_cn2_full/: citation.md
otbench/data/usna_cn2_lg/: citation.md
otbench/data/usna_cn2_sm/: citation.md
tests/benchmark/: test_bench_runner.py
