[tool.poetry]
name = "otbench"
version = "1.0.1"
description = "A framework for developing, evaluating, and comparing machine learning models for optical turbulence forecasting and prediction against a range of open-source datasets and models."
authors = ["cdjellen <cdjellen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.22"
pandas = "^2.2.2"
scikit-learn = ">=1.0.1"
lightgbm = ">=3.3.1"
xarray = ">=2022.3.0"
netcdf4 = ">=1.6.0"
matplotlib = ">=3.5.3"
requests = ">=2.22.0"
astral = "2.2"

[tool.poetry.group.dev.dependencies]
coveralls = "^4.0.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
torch = "^2.3.1"
yapf = "^0.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
